# bacterioscope

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
docs/: ROADMAP.md  SECURITY_AUDIT.md
notebooks/: pipeline_walkthrough.ipynb
scripts/: download_data.py  evaluate.py  generate_demo.py
src/bacterioscope/: __init__.py  __main__.py  _app_logic.py  app.py  cli.py  pipeline.py
src/bacterioscope/api/: routes.py  schemas.py
src/bacterioscope/classification/: clsi.py
src/bacterioscope/detection/: detector.py  train.py
src/bacterioscope/evaluation/: __init__.py  metrics.py  report.py
src/bacterioscope/segmentation/: watershed.py
src/bacterioscope/utils/: calibration.py  image.py  visualization.py
tests/: test_api.py  test_app.py  test_calibration.py  test_clsi.py  test_detector.py  test_metrics.py  test_pipeline.py  test_watershed.py
