[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bacterioscope"
version = "0.1.0"
description = "Automated antimicrobial resistance detection from Kirby-Bauer disk diffusion images"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Esteban A. Hernandez Sulvara", email = "ea.hernandezs1@uniandes.edu.co"},
    {name = "Paula A. Becerra Lara", email = "p.becerral@uniandes.edu.co"},
]
keywords = ["antimicrobial-resistance", "computer-vision", "kirby-bauer", "deep-learning", "clinical-microbiology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "Pillow>=10.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1",
    "ultralytics>=8.1",
]
api = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pydantic>=2.0",
    "httpx>=0.25",
    "python-multipart>=0.0.9",
]
ui = [
    "streamlit>=1.28",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff==0.15.20",
    "mypy>=1.7,<2.0",
    "pre-commit>=3.5",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
]
all = ["bacterioscope[ml,api,ui]"]

[project.scripts]
bacterioscope = "bacterioscope.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["bacterioscope"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cv2", "cv2.*", "numpy", "numpy.*", "ultralytics"]
follow_imports = "skip"

[tool.bandit]
targets = ["src/bacterioscope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/bacterioscope --cov-report=term-missing"
